deploy/bookings-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookings-db
spec:
  selector:
    matchLabels:
      mybookings/app: bookings
  serviceName: bookings-db
  replicas: 1
  template:
    metadata:
      labels:
        mybookings/app: bookings
        mybookings/tier: database
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
        volume.alpha.kubernetes.io/storage-class: standard
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: bookings-db
spec:
  clusterIP: None
  selector:
    mybookings/app: bookings
    mybookings/tier: database
  ports:
  - port: 27017
    name: mongo
