deploy/events-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: events-db
spec:
  selector:
    matchLabels:
      myevents/app: events
  serviceName: events-db
  replicas: 1
  template:
    metadata:
      labels:
        myevents/app: events
        myevents/tier: database
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
        volume.alpha.kubernetes.io/storage-class: standard
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: events-db
spec:
  clusterIP: None
  selector:
    myevents/app: events
    myevents/tier: database
  ports:
  - port: 27017
    name: mongo
